// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`renders ./components/drawer/demo/basic.md correctly 1`] = `
<div>
  <div
    class="am-navbar am-navbar-dark"
  >
    <div
      class="am-navbar-left"
      role="button"
    >
      <span
        aria-hidden="true"
        class="am-navbar-left-icon"
      >
        <svg
          class="am-icon am-icon-ellipsis am-icon-md"
        >
          <use
            href="#ellipsis"
          />
        </svg>
      </span>
    </div>
    <div
      class="am-navbar-title"
    >
      Basic
    </div>
    <div
      class="am-navbar-right"
    />
  </div>
  <div
    class="my-drawer am-drawer am-drawer-left am-drawer-open"
    style="min-height:0"
  >
    <div
      class="am-drawer-sidebar"
      style="transform:translateX(0%);-webkit-transform:translateX(0%)"
    >
      <div
        class="am-list"
      >
        <div
          class="am-list-body"
        >
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line am-list-line-multiple"
            >
              <div
                class="am-list-content"
              >
                Category
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category1
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category2
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category3
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category4
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category5
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category6
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category7
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category8
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category9
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category10
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category11
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category12
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category13
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category14
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category15
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-drawer-overlay"
      role="presentation"
      style="opacity:1;visibility:visible"
    />
    <div
      class="am-drawer-content"
      style="color:#A6A6A6;text-align:center;padding-top:42px"
    >
      Click upper-left corner
    </div>
  </div>
</div>
`;

exports[`renders ./components/drawer/demo/dock.md correctly 1`] = `
<div
  style="height:100%"
>
  <div
    class="am-navbar am-navbar-dark"
  >
    <div
      class="am-navbar-left"
      role="button"
    >
      <span
        aria-hidden="true"
        class="am-navbar-left-icon"
      >
        <svg
          class="am-icon am-icon-ellipsis am-icon-md"
        >
          <use
            href="#ellipsis"
          />
        </svg>
      </span>
    </div>
    <div
      class="am-navbar-title"
    >
      Docked in document
    </div>
    <div
      class="am-navbar-right"
    />
  </div>
  <div
    class="my-drawer am-drawer am-drawer-left"
    style="min-height:0"
  >
    <div
      class="am-drawer-sidebar"
      style="border:1px solid #ddd"
    >
      <div
        class="am-list"
      >
        <div
          class="am-list-body"
        >
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line am-list-line-multiple"
            >
              <div
                class="am-list-content"
              >
                Category
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category1
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category2
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category3
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category4
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category5
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category6
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category7
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category8
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category9
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category10
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category11
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category12
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category13
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category14
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
          <div
            class="am-list-item am-list-item-middle"
          >
            <div
              class="am-list-thumb"
            >
              <img
                src="https://zos.alipayobjects.com/rmsportal/eOZidTabPoEbPeU.png"
              />
            </div>
            <div
              class="am-list-line"
            >
              <div
                class="am-list-content"
              >
                Category15
              </div>
            </div>
            <div
              class="am-list-ripple"
              style="display:none"
            />
          </div>
        </div>
      </div>
    </div>
    <div
      class="am-drawer-overlay"
      role="presentation"
    />
    <div
      class="am-drawer-content"
      style="color:#A6A6A6;text-align:center;padding-top:42px"
    >
      Click upper-left corner
    </div>
  </div>
</div>
`;
